# xgc_theme_app

./: .gitignore  README.md  pyproject.toml
xgc_theme_app/: hooks.py  modules.txt
xgc_theme_app/public/css/: oneui.css
xgc_theme_app/public/css/themes/: amethyst.css  city.css  flat.css  modern.css  smooth.css
xgc_theme_app/public/js/: oneui.app.min.js  oneui.app.min.txt
xgc_theme_app/public/js/pages/: be_comp_calendar.min.js  be_comp_charts.min.js  be_comp_dialogs.min.js  be_comp_image_cropper.min.js  be_comp_maps_vector.min.js  be_comp_rating.min.js  be_forms_validation.min.js  be_pages_dashboard.min.js  be_pages_dashboard_v1.min.js  be_pages_ecom_dashboard.min.js  be_tables_datatables.min.js  be_ui_animations.min.js  be_ui_icons.min.js  be_ui_progress.min.js  op_auth_lock.min.js  op_auth_reminder.min.js  op_auth_signin.min.js  op_auth_signup.min.js  op_auth_two_factor.min.js  op_coming_soon.min.js  op_installation.min.js
xgc_theme_app/public/js/plugins/bootstrap-maxlength/: bootstrap-maxlength.js
xgc_theme_app/public/js/plugins/ckeditor5-classic/: LICENSE.md  README.md
xgc_theme_app/public/js/plugins/ckeditor5-inline/: LICENSE.md  README.md
xgc_theme_app/public/layouts/partials/: Sidebar.vue
xgc_theme_app/public/layouts/variations/: Landing.vue
xgc_theme_app/public/views/landing/: LandingView.vue
xgc_theme_app/templates/: base.html
xgc_theme_app/templates/includes/: avatar_macro.html  head.html  splash_screen.html
xgc_theme_app/templates/includes/footer/: footer_logo_extension.html  footer_powered.html
xgc_theme_app/www/: 404.html  app.html
(+40 files in other folders)
